tests/ui/recursion_limit/empty.stderr
error: `limit` must be a non-negative integer
  --> $DIR/empty.rs:3:1
   |
LL | #![recursion_limit = ""]
   | ^^^^^^^^^^^^^^^^^^^^^--^
   |                      |
   |                      `limit` must be a non-negative integer

error: `limit` must be a non-negative integer
  --> $DIR/empty.rs:3:1
   |
LL | #![recursion_limit = ""]
   | ^^^^^^^^^^^^^^^^^^^^^--^
   |                      |
   |                      `limit` must be a non-negative integer

error: aborting due to 2 previous errors

